--- a/NPSSOnlineRecruitmentPortal/Content/master_style.css
+++ b/NPSSOnlineRecruitmentPortal/Content/master_style.css
@@ -10543,7 +10543,7 @@ button.btn.dropdown-toggle::after, .wysihtml5-toolbar .btn.dropdown-toggle::afte
     }
 
 .btn-success {
-    background-color: #26c6da;
+    background-color: #03a9f3;
     border-color: #26c6da;
     color: #fff;
 }
