--- a/NPSSOnlineRecruitmentPortal/Views/Home/Index.cshtml
+++ b/NPSSOnlineRecruitmentPortal/Views/Home/Index.cshtml
@@ -8,4 +8,4 @@
 <img src="~/Content/Images/logo.jpg" />
 <img src="~/Content/Images/Title.jpg" />
 <br /><br /><br />
-<center><a href="javascript:void(0)" title="Application Details" style="font-weight: bold; font-size: large" class="btn btn-info">Advertisment Details <br /> જાહેરાત ની વિગત</a></center>
+<center><a href="@Url.Action("Instructions", "Home")" title="Application Details" style="font-weight: bold; font-size: large" class="btn btn-info">ઓનલાઇન અરજી કરવાની રીત <br /> સમજવા અહીં ક્લિક કરો</a></center>
